fix : image alignment fixed

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,7 +4,7 @@
     --main-background-color:#0D1323;
     /* neutral colors */
     --color-navy-200:hsl(236, 100%, 87%);
-    
+    --color-work:hsl(15, 100%, 70%);
     
     /* font family */
     --main-font-family:'Rubik' , sans;
@@ -73,6 +73,8 @@ body {
     color: var(--color-navy-200);
     font-weight: 400;
     padding: 2rem;
+    display: flex;
+    align-items: center;
 }
 
 .user-control .user-input .item{
@@ -126,20 +128,47 @@ input[type="radio"]:checked + label {
     card styling
     ========================
 */
-.card img {
+.card .image-container {
+    padding: 1rem;
     width: 64px;
+    height: 64px;
+    z-index: -1;
+    align-self: end;
 }
 
-.card { 
+.card {    
+    border-radius: 1rem;
+    border: 1px solid;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    /* align-items: center; */
+    justify-content: space-between;      
 }
 
-.card .detail{
+.card-1{
+    background-color: var(--color-work);
+    z-index: 1;       
+}
+
+.card .detail{   
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
     background-color: var(--all-card-background-color);
-        
+    border-radius: 1rem;
+    color: white;
 }
 
+.card .detail .item-title {
+    margin-top: 0;
+    font-size: 1.25rem;
+    font-weight: 500;
+}
 
+.card .detail .current-weekly-time {
+    font-size: 3rem;
+    font-weight: 300;
+}
+
+.card .detail .prev-weekly-time {
+    color: var(--color-navy-200);
+}
